gobmkida/c2/owl_does_attack
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4443:12: error: expected expression
*( _OWORD *)( v16 + 11926156) = *( _OWORD *)&owl_goal_worm[11]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4443:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v16 + 11926156) = *( _OWORD *)&owl_goal_worm[11]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4443:44: error: expected expression
*( _OWORD *)( v16 + 11926156) = *( _OWORD *)&owl_goal_worm[11]; 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4443:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v16 + 11926156) = *( _OWORD *)&owl_goal_worm[11]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4444:12: error: expected expression
*( _OWORD *)( v16 + 11926144) = *( _OWORD *)&owl_goal_worm[8]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4444:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v16 + 11926144) = *( _OWORD *)&owl_goal_worm[8]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4444:44: error: expected expression
*( _OWORD *)( v16 + 11926144) = *( _OWORD *)&owl_goal_worm[8]; 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4444:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v16 + 11926144) = *( _OWORD *)&owl_goal_worm[8]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4445:12: error: expected expression
*( _OWORD *)( v16 + 11926128) = *( _OWORD *)&owl_goal_worm[4]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4445:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v16 + 11926128) = *( _OWORD *)&owl_goal_worm[4]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4445:44: error: expected expression
*( _OWORD *)( v16 + 11926128) = *( _OWORD *)&owl_goal_worm[4]; 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4445:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v16 + 11926128) = *( _OWORD *)&owl_goal_worm[4]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4446:12: error: expected expression
*( _OWORD *)&dragon_goal_worms[v16 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4446:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&dragon_goal_worms[v16 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4446:60: error: expected expression
*( _OWORD *)&dragon_goal_worms[v16 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
                                                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/engine/owl.c:4446:52: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&dragon_goal_worms[v16 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
                                                   ^
16 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_does_attack/src/obj/1/owl.o] Error 1
